--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
+# Python cache files
+__pycache__/
+*.py[cod]
 
+# Secret API Keys (Don't share these!)
+.env
+
+# Virtual environments
+venv/
+env/
+.venv/
